fix: 💄 fix spacing

--- a/src/style.css
+++ b/src/style.css
@@ -312,7 +312,7 @@ button.cell {
 }
 
 .dialog .body > * {
-  padding-inline: 12px;
+  padding: 12px;
 }
 
 .dialog h1 {
